[tool.poetry]
name = "idoven"
version = "0.1.0"
description = "Idoven backend challenge"
authors = ["Nicolas Kasevich <n.kasevich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlalchemy = "^2.0.28"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
pydantic = {extras = ["email"], version = "^2.6.3"}
bcrypt = "4.0.1"
pydantic-settings = "^2.2.1"
celery = "^5.3.6"
redis = "^5.0.2"
postgres = "^4.0"
psycopg2-binary = "^2.9.9"
flower = "^2.0.1"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.0"
pytest = "^8.0.2"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
